--- a/ElevationMap.Altimeter/ElevationMap.Altimeter.csproj
+++ b/ElevationMap.Altimeter/ElevationMap.Altimeter.csproj
@@ -65,6 +65,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converters\FormatConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
