--- a/ElevationMap.Altimeter/packages.config
+++ b/ElevationMap.Altimeter/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Prism.WindowsPhone7" version="4.1.0" targetFramework="wp71" />
+  <package id="SterlingPhone" version="1.6.2" targetFramework="wp71" />
 </packages>
