--- a/ElevationMap.Altimeter/ElevationMap.Altimeter.csproj
+++ b/ElevationMap.Altimeter/ElevationMap.Altimeter.csproj
@@ -80,7 +80,8 @@
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Kernel\Kernel.cs" />
     <Compile Include="Models\Buffer\BufferDatabase.cs" />
-    <Compile Include="Models\Buffer\MeasurementBuffer.cs" />
+    <Compile Include="Models\Buffer\IBuffer.cs" />
+    <Compile Include="Models\Buffer\Buffer.cs" />
     <Compile Include="Models\Data\Accuracy.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -96,10 +97,14 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\Settings\BufferViewModel.cs" />
     <Compile Include="ViewModels\Settings\DesiredAccuracyViewModel.cs" />
     <Compile Include="ViewModels\Settings\SettingsViewModel.cs" />
     <Compile Include="ViewModels\Tracker\AccuracyViewModel.cs" />
     <Compile Include="ViewModels\Tracker\TrackerViewModel.cs" />
+    <Compile Include="Views\Setings\BufferView.xaml.cs">
+      <DependentUpon>BufferView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Setings\DesiredAccuracyView.xaml.cs">
       <DependentUpon>DesiredAccuracyView.xaml</DependentUpon>
     </Compile>
@@ -118,6 +123,10 @@
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Setings\BufferView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Setings\DesiredAccuracyView.xaml">
       <Generator>MSBuild:Compile</Generator>
